--- a/centos/python37/Dockerfile
+++ b/centos/python37/Dockerfile
@@ -71,5 +71,10 @@ RUN yum update -y
 # upgrade pip
 RUN pip install -U pip
 
+# expose some port
+EXPOSE 22
+EXPOSE 80
+EXPOSE 443
+
 CMD [ "bash" ]
 
