--- a/compose/mongo/compose.yml
+++ b/compose/mongo/compose.yml
@@ -1,4 +1,4 @@
-version: '3.1'
+version: '3.8'
 
 services:
 
@@ -7,9 +7,6 @@ services:
         restart: always
         ports:
             - "27017:27017"
-        environment:
-            MONGO_INITDB_ROOT_USERNAME: root
-            MONGO_INITDB_ROOT_PASSWORD: example
 
     mongo-express:
         image: mongo-express
@@ -17,6 +14,4 @@ services:
         ports:
             - "8081:8081"
         environment:
-            ME_CONFIG_MONGODB_ADMINUSERNAME: root
-            ME_CONFIG_MONGODB_ADMINPASSWORD: example
-            ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+            ME_CONFIG_MONGODB_SERVER: mongo
