feat(smtp): add commentlink and smtp server config

--- a/compose/gerrit/gerrit.config
+++ b/compose/gerrit/gerrit.config
@@ -1,36 +1,50 @@
 [gerrit]
-  basePath = git
+    basePath = git
 
 [index]
-  type = LUCENE
+    type = LUCENE
 
 [auth]
-  type = ldap
-  gitBasicAuth = true
+    type = ldap
+    gitBasicAuth = true
 
 [ldap]
-  server = ldap://ldap
-  username=cn=admin,dc=example,dc=org
-  accountBase = dc=example,dc=org
-  accountPattern = (&(objectClass=person)(uid=${username}))
-  accountFullName = displayName
-  accountEmailAddress = mail
+    server = ldap://ldap
+    username=cn=admin,dc=example,dc=org
+    accountBase = dc=example,dc=org
+    accountPattern = (&(objectClass=person)(uid=${username}))
+    accountFullName = displayName
+    accountEmailAddress = mail
 
 [sendemail]
-  smtpServer = localhost
+    smtpServer = smtp.exmail.qq.com
+    smtpServerPort = 465
+    smtpEncryption = SSL
+    sslVerify = true
+    smtpUser = webhook@max-optics.com
+    smtpPass =
+    from = webhook@max-optics.com
 
 [sshd]
-  listenAddress = *:29418
+    listenAddress = *:29418
 
 [httpd]
-  listenUrl = http://*:8080/
+    listenUrl = http://*:8080/
 
 [cache]
-  directory = cache
+    directory = cache
 
 [container]
-  user = root
+    user = root
 
 [download]
-  schema = http
-  schema = ssh
+    schema = http
+    schema = ssh
+
+[commentlink "changeid"]
+    match = (I[0-9a-f]{8,40})
+    link = "#/q/$1"
+
+[commentlink "gitee"]
+    match = "gitee:#(.{6})"
+    link = https://e.gitee.com/max-optics/dashboard?issue=$1
