--- a/compose/redis/redis.yml
+++ b/compose/redis/redis.yml
@@ -5,7 +5,7 @@ services:
         ports:
             - "6379:6379"
         volumes:
-            - redis_data:/data
+            - /opt/redis/data:/data
     redisinsight:
         image: redislabs/redisinsight
         ports:
@@ -13,5 +13,4 @@ services:
         volumes:
             - redisinsight_db:/db
 volumes:
-    redis_data:
     redisinsight_db:
