feat(restart): add restart strategy: always

--- a/compose/redis/redis.yml
+++ b/compose/redis/redis.yml
@@ -6,11 +6,13 @@ services:
             - "6379:6379"
         volumes:
             - /opt/redis/data:/data
+        restart: always
     redisinsight:
         image: redislabs/redisinsight
         ports:
             - "8001:8001"
         volumes:
             - redisinsight_db:/db
+        restart: always
 volumes:
     redisinsight_db:
