--- a/compose/homeassistant/docker-compose.yml
+++ b/compose/homeassistant/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: Compose specification
 services:
     homeassistant:
         container_name: homeassistant
@@ -6,6 +6,12 @@ services:
         volumes:
             - /opt/homeassistant/:/config
             - /etc/localtime:/etc/localtime:ro
-        restart: unless-stopped
         privileged: true
         network_mode: host
+        deploy:
+            replicas: 2
+            restart_policy:
+                condition: on-failure
+                delay: 10s
+                max_attempts: 3
+                window: 120s
