feat(compose): update jenkins compose

--- a/compose/jenkins/docker-compose.yml
+++ b/compose/jenkins/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3.8'
 services:
     jenkins:
-        image: jenkins/jenkins:lts
+        image: jenkins/jenkins
         privileged: true
         user: root
         ports:
-            - "8088:8080"
-            - "50008:50000"
+            - "8080:8080"
+            - "50000:50000"
         container_name: jenkins
         volumes:
             - /opt/jenkins:/var/jenkins_home
