--- a/compose/gerrit/docker-compose.yml
+++ b/compose/gerrit/docker-compose.yml
@@ -8,6 +8,7 @@ services:
             - "80:8080"
         depends_on:
             - ldap
+        restart: always
         volumes:
             - /opt/gerrit/etc:/var/gerrit/etc
             - /opt/gerrit/git:/var/gerrit/git
@@ -22,6 +23,7 @@ services:
         ports:
             - "389:389"
             - "636:636"
+        restart: always
         environment:
             - LDAP_ADMIN_PASSWORD=secret
         volumes:
@@ -32,5 +34,6 @@ services:
         image: osixia/phpldapadmin
         ports:
             - "6443:443"
+        restart: always
         environment:
             - PHPLDAPADMIN_LDAP_HOSTS=ldap
