--- a/compose/jenkins/docker-compose.yml
+++ b/compose/jenkins/docker-compose.yml
@@ -2,12 +2,13 @@ version: '3.8'
 services:
     jenkins:
         image: jenkins/jenkins
+        container_name: jenkins
         privileged: true
         user: root
         ports:
             - "8080:8080"
             - "50000:50000"
-        container_name: jenkins
+        restart: always
         volumes:
             - /opt/jenkins:/var/jenkins_home
             - /var/run/docker.sock:/var/run/docker.sock
