--- a/compose/sonar/docker-compose.yml
+++ b/compose/sonar/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.9"
 
 services:
     sonarqube:
@@ -9,6 +9,9 @@ services:
         platform: linux/x86_64
         depends_on:
             - db
+        ports:
+            - "9000:9000"
+        restart: always
         environment:
             SONAR_JDBC_URL: jdbc:postgresql://db:5432/sonar
             SONAR_JDBC_USERNAME: sonar
@@ -17,14 +20,13 @@ services:
             - sonarqube_data:/opt/sonarqube/data
             - sonarqube_extensions:/opt/sonarqube/extensions
             - sonarqube_logs:/opt/sonarqube/logs
-        ports:
-            - "9000:9000"
     db:
-        image: postgres:12
+        image: postgres:14
         platform: linux/x86_64
         environment:
             POSTGRES_USER: sonar
             POSTGRES_PASSWORD: sonar
+        restart: always
         volumes:
             - postgresql:/var/lib/postgresql
             - postgresql_data:/var/lib/postgresql/data
