feat(gerrit): update gerrit config

--- a/compose/gerrit/gerrit.config
+++ b/compose/gerrit/gerrit.config
@@ -16,14 +16,19 @@
     accountFullName = displayName
     accountEmailAddress = mail
 
+[user]
+    name = Gerrit Code Review
+    email = webhook@max-optics.com
+    anonymousCoward = Gerrit Code Review
+
 [sendemail]
     smtpServer = smtp.exmail.qq.com
     smtpServerPort = 465
     smtpEncryption = SSL
     sslVerify = true
     smtpUser = webhook@max-optics.com
-    smtpPass =
-    from = webhook@max-optics.com
+    smtpPass = YOUR_PASSWORD
+    from = ${user} (Code Review) <webhook@max-optics.com>
 
 [sshd]
     listenAddress = *:29418
