feat(gerrit): rearrange the gerrit.config
add plugin-manager config
set allowRemoteAdmin = true

--- a/compose/gerrit/gerrit.config
+++ b/compose/gerrit/gerrit.config
@@ -7,6 +7,26 @@
 [auth]
 	type = ldap
 
+[sshd]
+	listenAddress = *:29418
+
+[httpd]
+	listenUrl = http://*:8080/
+
+[cache]
+	directory = cache
+
+[container]
+	user = root
+
+[download]
+	schema = http
+	schema = ssh
+
+[plugins]
+	# for plugin-manager plugin
+	allowRemoteAdmin = true
+
 [ldap]
 	server = ldap://ldap
 	username = cn=admin,dc=example,dc=org
@@ -28,22 +48,6 @@
 	smtpUser = webhook@max-optics.com
 	smtpPass = YOUR_PASSWORD
 	from = ${user} (Code Review) <webhook@max-optics.com>
-
-[sshd]
-	listenAddress = *:29418
-
-[httpd]
-	listenUrl = http://*:8080/
-
-[cache]
-	directory = cache
-
-[container]
-	user = root
-
-[download]
-	schema = http
-	schema = ssh
 
 [commentlink "changeid"]
 	match = (I[0-9a-f]{8,40})
