feat(oauth): add oauth config

--- a/compose/gerrit/gerrit.ldap.config
+++ b/compose/gerrit/gerrit.ldap.config
@@ -35,6 +35,9 @@
 	accountFullName = displayName
 	accountEmailAddress = mail
 
+[receive]
+	enableSignedPush = false
+
 [user]
 	name = Gerrit Code Review
 	email = webhook@max-optics.com
