docs(config): update the oauth config

--- a/compose/gerrit/secure.oauth.config
+++ b/compose/gerrit/secure.oauth.config
@@ -1,8 +1,8 @@
 [plugin "gerrit-oauth-provider-google-oauth"]
-	client-secret = secret
+	client-secret = secret-example
 [plugin "gerrit-oauth-provider-github-oauth"]
-	client-secret = secret
+	client-secret = secret-example
 [plugin "gerrit-oauth-provider-bitbucket-oauth"]
-	client-secret = secret
+	client-secret = secret-example
 [plugin "gerrit-oauth-provider-facebook-oauth"]
-	client-secret = secret
+	client-secret = secret-example
