--- a/compose/gerrit/gerrit.oauth.config
+++ b/compose/gerrit/gerrit.oauth.config
@@ -5,14 +5,14 @@
 	type = LUCENE
 
 [auth]
-	type = oauth
+	type = OAUTH
 	gitBasicAuthPolicy = HTTP
 
 [sshd]
 	listenAddress = *:29418
 
 [httpd]
-	listenUrl = http://*:8080/
+	listenUrl = proxy-http://*:8080
 
 [cache]
 	directory = cache
