--- a/compose/nginx/nginx.conf
+++ b/compose/nginx/nginx.conf
@@ -1,3 +1,4 @@
+user nginx;
 worker_processes auto;
 worker_rlimit_nofile 65535;
 
@@ -7,16 +8,5 @@ events {
 }
 
 http {
-    server {
-        listen 80;
-        listen [::]:80;
-        server_name aurora.inf;
-        location / {
-            proxy_pass http://localhost:18080;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $remote_addr;
-        }
-    }
+    include /etc/nginx/conf.d/*.conf;
 }
