feat(gerrit): update reviewers config

--- a/compose/gerrit/reviewers.config
+++ b/compose/gerrit/reviewers.config
@@ -1,6 +1,7 @@
 [reviewers]
 	enableREST = true
-	enableUI = true
+	suggestOnly = false
+	ignoreWip = false
 
 [filter "*"]
 	reviewer = john.A.doe@example.com
