--- a/compose/homeassistant/docker-compose.yml
+++ b/compose/homeassistant/docker-compose.yml
@@ -2,16 +2,20 @@ version: Compose specification
 services:
     homeassistant:
         image: "ghcr.io/home-assistant/home-assistant"
-        volumes:
-            - /opt/homeassistant/:/config
-            - /etc/localtime:/etc/localtime:ro
         privileged: true
         network_mode: host
         restart: always
-        deploy:
-            replicas: 2
-            restart_policy:
-                condition: on-failure
-                delay: 10s
-                max_attempts: 3
-                window: 120s
+        volumes:
+            - /opt/homeassistant/:/config
+            - /etc/localtime:/etc/localtime:ro
+    nginx:
+        image: nginx
+        ports:
+            - "80:80"
+            - "443:443"
+        restart: always
+        depends_on:
+            - homeassistant
+        volumes:
+            - ./conf.d/:/etc/nginx/conf.d/
+            - ./nginx.conf:/etc/nginx/nginx.conf
