--- a/compose/sonar/docker-compose.yml
+++ b/compose/sonar/docker-compose.yml
@@ -7,31 +7,41 @@ services:
         # build: ./node
         image: sonarqube
         platform: linux/x86_64
+        hostname: sonarqube
+        container_name: sonarqube
         depends_on:
             - db
-        ports:
-            - "9000:9000"
-        restart: always
         environment:
             SONAR_JDBC_URL: jdbc:postgresql://db:5432/sonar
             SONAR_JDBC_USERNAME: sonar
             SONAR_JDBC_PASSWORD: sonar
         volumes:
+            - sonarqube_bundled-plugins:/opt/sonarqube/lib/bundled-plugins
+            - sonarqube_conf:/opt/sonarqube/conf
             - sonarqube_data:/opt/sonarqube/data
             - sonarqube_extensions:/opt/sonarqube/extensions
             - sonarqube_logs:/opt/sonarqube/logs
+        ports:
+            - "9000:9000"
+            - "9092:9092"
+        restart: unless-stopped
     db:
         image: postgres:14
         platform: linux/x86_64
+        hostname: postgresql
+        container_name: postgresql
         environment:
             POSTGRES_USER: sonar
             POSTGRES_PASSWORD: sonar
-        restart: always
+            POSTGRES_DB: sonar
         volumes:
             - postgresql:/var/lib/postgresql
             - postgresql_data:/var/lib/postgresql/data
+        restart: unless-stopped
 
 volumes:
+    sonarqube_bundled-plugins:
+    sonarqube_conf:
     sonarqube_data:
     sonarqube_extensions:
     sonarqube_logs:
