--- a/compose/homeassistant/docker-compose.yml
+++ b/compose/homeassistant/docker-compose.yml
@@ -4,7 +4,7 @@ services:
         image: "ghcr.io/home-assistant/home-assistant"
         privileged: true
         network_mode: host
-        restart: always
+        restart: unless-stopped
         volumes:
             - /opt/homeassistant/:/config
             - /etc/localtime:/etc/localtime:ro
@@ -13,7 +13,7 @@ services:
         ports:
             - "80:80"
             - "443:443"
-        restart: always
+        restart: unless-stopped
         depends_on:
             - homeassistant
         volumes:
