feat: add adguard

--- a/compose/adguard/docker-compose.yml
+++ b/compose/adguard/docker-compose.yml
@@ -1,7 +1,7 @@
 version: Compose specification
 
 services:
-    adguard:
+    guard:
         image: adguard/adguardhome
         ports:
           - 53:53/tcp
