--- a/compose/traefik/docker-compose.yml
+++ b/compose/traefik/docker-compose.yml
@@ -2,10 +2,10 @@ version: Compose specification
 
 services:
     traefik:
-        image: traefik:2.9
+        image: traefik:3.0
         ports:
             - "80:80"
             - "8080:8080"
         volumes:
-            - "./traefik.toml:/etc/traefik/traefik.toml"
+            - "./traefik.yml:/traefik.yml"
             - "/var/run/docker.sock:/var/run/docker.sock:ro"
