--- a/compose/traefik/docker-compose.yml
+++ b/compose/traefik/docker-compose.yml
@@ -7,5 +7,6 @@ services:
             - "80:80"
             - "8080:8080"
         volumes:
+            # /traefik.yml and /etc/traefik/traefik.yml are both available.
             - "./traefik.yml:/traefik.yml"
             - "/var/run/docker.sock:/var/run/docker.sock:ro"
