--- a/compose/jenkins/docker-compose.yml
+++ b/compose/jenkins/docker-compose.yml
@@ -10,5 +10,8 @@ services:
             - "50000:50000"
         restart: always
         volumes:
-            - /opt/jenkins:/var/jenkins_home
+            - jenkins_home:/var/jenkins_home
             - /var/run/docker.sock:/var/run/docker.sock
+
+volumes:
+    jenkins_home:
