--- a/compose/sonar/docker-compose.yml
+++ b/compose/sonar/docker-compose.yml
@@ -21,6 +21,8 @@ services:
         ports:
             - "9000:9000"
         restart: unless-stopped
+        networks:
+            - traefik-net
     db:
         image: postgres:14
         hostname: postgresql
@@ -33,6 +35,8 @@ services:
             - postgresql:/var/lib/postgresql
             - postgresql_data:/var/lib/postgresql/data
         restart: unless-stopped
+        networks:
+            - traefik-net
 
 volumes:
     sonarqube_data:
@@ -40,3 +44,7 @@ volumes:
     sonarqube_logs:
     postgresql:
     postgresql_data:
+
+networks:
+    traefik-net:
+        external: true
