--- a/compose/gerrit/docker-compose.yml
+++ b/compose/gerrit/docker-compose.yml
@@ -17,7 +17,7 @@ services:
             - /opt/gerrit/cache:/var/gerrit/cache
             - /opt/gerrit/plugins:/var/gerrit/plugins
         environment:
-            - CANONICAL_WEB_URL=http://aurora.inf
+            - CANONICAL_WEB_URL=http://gerrit.m.local
             - HTTPD_LISTEN_URL=proxy-http://*:8080
         #command: init
 
@@ -33,23 +33,10 @@ services:
             - /opt/gerrit/ldap/var:/var/lib/ldap
             - /opt/gerrit/ldap/etc:/etc/ldap/slapd.d
 
-    ldap-admin:
+    ldapadmin:
         image: osixia/phpldapadmin
         ports:
             - "6443:443"
         restart: always
         environment:
             - PHPLDAPADMIN_LDAP_HOSTS=ldap
-
-    nginx:
-        image: nginx:1.21
-        ports:
-            - "80:80"
-            - "443:443"
-        restart: always
-        privileged: true
-        environment:
-            - TZ=Asia/Shanghai
-        volumes:
-            - /opt/nginx:/etc/nginx
-            - /var/log/nginx:/var/log/nginx
