--- a/compose/sonar/docker-compose.yml
+++ b/compose/sonar/docker-compose.yml
@@ -18,8 +18,8 @@ services:
             - sonarqube_data:/opt/sonarqube/data
             - sonarqube_extensions:/opt/sonarqube/extensions
             - sonarqube_logs:/opt/sonarqube/logs
-        ports:
-            - "9000:9000"
+        expose:
+            - 9000
         restart: unless-stopped
         networks:
             - traefik-net
