feat: allow Traefik to automatically watch for file changes

--- a/compose/traefik/traefik.yml
+++ b/compose/traefik/traefik.yml
@@ -12,3 +12,4 @@ providers:
         # location in traefik container
         # filename: /traefik.yml
         directory: /etc/traefik/dynamic-conf
+        watch: true
