--- a/compose/traefik/dynamic-conf/gerrit-sonar.yml
+++ b/compose/traefik/dynamic-conf/gerrit-sonar.yml
@@ -14,7 +14,7 @@ http:
         ldapadmin:
             loadBalancer:
                 servers:
-                    -   url: "http://ldapadmin:443"
+                    -   url: "https://ldapadmin:443"
         gerrit:
             loadBalancer:
                 servers:
