--- a/compose/jenkins/docker-compose.yml
+++ b/compose/jenkins/docker-compose.yml
@@ -9,6 +9,9 @@ services:
             - 8080
             - 50000
         restart: always
+        extra_hosts:
+            # config for gerrit, if no gerrit, remove it
+            - gerrit.m.local:192.168.91.103
         volumes:
             - jenkins_home:/var/jenkins_home
             - /var/run/docker.sock:/var/run/docker.sock
