feat: sonar integrates with ldap

--- a/compose/gerrit/reviewers.config
+++ b/compose/gerrit/reviewers.config
@@ -4,7 +4,7 @@
 	ignoreWip = false
 
 [filter "*"]
-	reviewer = john.A.doe@example.com
+	reviewer = Review Users
 	reviewer = john.F.doe@example.com
 	reviewer = john.G.doe@example.com
 	reviewer = john.J.doe@example.com
