--- a/compose/sonar/docker-compose.yml
+++ b/compose/sonar/docker-compose.yml
@@ -14,10 +14,25 @@ services:
             SONAR_JDBC_URL: jdbc:postgresql://db:5432/sonar
             SONAR_JDBC_USERNAME: sonar
             SONAR_JDBC_PASSWORD: sonar
+            # configure ldap server, if no need, remove it
+            # HERE LDAP server from the gerrit compose
+            SONAR_SECURITY_REALM: LDAP
+            LDAP_URL: ldap://ldap
+            LDAP_BINDDN: cn=admin,dc=example,dc=org
+            LDAP_BINDPASSWORD: secret
+            LDAP_USER_BASEDN: dc=example,dc=org
+            LDAP_USER_REQUEST: (&(objectClass=person)(uid={login}))
         volumes:
             - sonarqube_data:/opt/sonarqube/data
             - sonarqube_extensions:/opt/sonarqube/extensions
             - sonarqube_logs:/opt/sonarqube/logs
+        ulimits:
+            nofile:
+                soft: 131072
+                hard: 131072
+            nproc:
+                soft: 8192
+                hard: 8192
         expose:
             - 9000
         restart: unless-stopped
