feat: support https with selfsigned certs

--- a/compose/traefik/self-signed/dynamic-conf/self.yml
+++ b/compose/traefik/self-signed/dynamic-conf/self.yml
@@ -1,16 +1,16 @@
 ### Dynamic Configuration
 tls:
     certificates:
-        -   certFile: /certs/domain.cert
-            keyFile: /certs/domain.key
+        -   certFile: /certs/cert.pem
+            keyFile: /certs/key.pem
             stores:
                 - default
     # Specifying the default certificate
     stores:
         default:
             defaultCertificate:
-                certFile: /certs/domain.cert
-                keyFile: /certs/domain.key
+                certFile: /certs/cert.pem
+                keyFile: /certs/key.pem
 http:
     routers:
         dashboard:
